force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__ItemCategory3Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCategory3Name__c</fullName>
    <label>Item Category 3</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCategory3Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>