force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__ItemCategory5Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCategory5Name__c</fullName>
    <label>Item Category 5</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCategory5Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>