force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__ItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemId__c</fullName>
    <label>Item Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>