force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__ItemPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemPriceAmount__c</fullName>
    <label>Item Price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>