force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__ItemVariantDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemVariantDescription__c</fullName>
    <label>Item Variant</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemVariantDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>