force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__rel_1732260213656_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260213656_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WebsiteItemEngagement_EngagementChan_rel</label>
    <referenceTo>ssot__EngagementChannelAction__dlm</referenceTo>
    <relationshipLabel>WebsiteItemEngagement_EngagementChan_rel</relationshipLabel>
    <relationshipName>rel_1732260213656_end</relationshipName>
    <type>Lookup</type>
</CustomField>