force-app/main/default/objects/ssot__WebsiteItemEngagement__dlm/fields/ssot__rel_1732260245368_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260245368_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WebsiteItemEngagement_UtmId_map_Camp_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>WebsiteItemEngagement_UtmId_map_Camp_rel</relationshipLabel>
    <relationshipName>rel_1732260245368_end</relationshipName>
    <type>Lookup</type>
</CustomField>